style.css
* {
  margin: 0;
  padding: 0;
}
html,
body,
div#root,
div#app {
  width: 100%;
  height: 100%;
}

/* FLEX LAYOUT HELPER */
div.column {
  display: flex;
  flex-direction: column;
}
.fill {
  flex: 1;
}

/* ENTIRE APP */
body {
  background: #575b54;
  color: white;
  user-select: none;
}
div#app {
  display: flex;
  flex-direction: row;
}

img {
  filter: drop-shadow(0px 2px 4px black);
  box-sizing: border-box;
}
div.image-filename,
div.image-location {
  overflow-wrap: break-word;
  word-break: break-all;
  user-select: text;
}

/* SIDE COLUMN */

div#side-column {
  background: #5c4a51;
  width: 288px;
}

/* SIDE COLUMN - HISTORY */
ul#history {
  flex: 1;
  overflow-y: scroll;
  text-align: center;
}
ul#history::-webkit-scrollbar {
  width: 8px;
}
ul#history::-webkit-scrollbar-track {
  background: #47393e;
}
ul#history::-webkit-scrollbar-thumb {
  background: #633;
  box-shadow: inset 0 0 0 1px #888;
}
ul#history li {
  padding: 16px;
  text-align: center;
}
ul#history li:hover {
  background: #966;
}
ul#history img {
  display: block;
  max-width: 100%;
  max-height: 192px;
  min-height: 96px;
  margin: 0 auto 4px;
}
ul#history div.image-filename {
  font-size: 12px;
  display: inline-block;
}

/* IMAGE PREVIEW */

div#image-preview {
  align-items: center;
  justify-content: center;
  padding: 16px;
  color: #30322f;
}
div#image-preview.ready-to-pick {
  cursor: pointer;
}

/* IMAGE PREVIEW - IMAGE SUMMARY */

div#image-summary {
  display: inline-block;
  text-align: center;
  background: #f4d8a1;
  color: black;
  padding: 6px 15px;
  position: absolute;
  top: 24px;
  filter: drop-shadow(0px 2px 4px black);
}
div#image-summary div.image-filename {
  font-weight: normal;
}
div#image-summary div.image-location {
  font-size: 12px;
}

/* IMAGE PREVIEW - IMAGE */

div#image-container {
  min-width: 0;
  min-height: 0;
  text-align: center;
}
div#image-container img {
  max-width: 100%;
  max-height: 100%;
  min-height: 256px;
}

/* IMAGE PREVIEW - GENERAL MESSAGE */

div#image-preview p {
  font-size: 24px;
}
div#image-preview p.error {
  background: tomato;
  color: white;
  display: inline-block;
  margin: 0 auto;
  font-size: 16px;
  padding: 8px 15px;
}
div#image-preview p.emoji-text {
  font-size: 96px;
  display: inline-block;
  margin: 0 auto;
}
div#image-preview p#die-icon {
  animation: bounce-animation 1s infinite;
  position: relative;
}
@keyframes bounce-animation {
  0%,
  100% {
    top: 0;
    transform: scale(1);
  }
  30% {
    top: -32px;
    transform: scale(0.96, 1.04);
  }
  60% {
    transform: scale(1);
  }
  90% {
    top: 0;
    transform: scale(1.15, 0.9);
  }
}

/* OVERLAY */

div#overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  backdrop-filter: blur(8px);
  display: flex;
  background: rgba(0, 0, 0, 0.5);
  justify-content: center;
  align-items: center;
  font-size: 24px;
}

/* LOADING CIRCLE */
/* loading.io https://loading.io/css/ */

.lds-dual-ring {
  display: inline-block;
  width: 80px;
  height: 80px;
}
.lds-dual-ring:after {
  content: " ";
  display: block;
  width: 64px;
  height: 64px;
  margin: 8px;
  border-radius: 50%;
  border: 6px solid #fff;
  border-color: #fff transparent #fff transparent;
  animation: lds-dual-ring 1.2s linear infinite;
}
@keyframes lds-dual-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

div.loading {
  display: block;
  text-align: center;
  margin: 0 auto;
}

